--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
   </body>
-  <script src="/socket.io/socket.io.js"></script>
+  <!-- <script src="/socket.io/socket.io.js"></script> -->
   <script src="/public/dist/testApp.js"></script>
 </html>
