--- a/public/screenCapture.html
+++ b/public/screenCapture.html
@@ -7,5 +7,5 @@
   <body>
   </body>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/public/dist/testApp.js"></script>
+  <script src="/public/dist/screenCapture.js"></script>
 </html>
