--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
-  <body>
-  </body>
-  <script src="/public/dist/testApp.js"></script>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <title>title</title>
+</head>
+
+<body>
+</body>
+<script src="/public/dist/testApp.js"></script>
+
 </html>
