--- a/desktopApp/index.html
+++ b/desktopApp/index.html
@@ -1,3 +1,20 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
 
-<script src="dist/index.js"></script>
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body style="background-color: #1e272e;color:#bdc0ca">
+    <h1 style="margin: auto;
+    width: 50%;text-align: center;font-weight: bold;font-family: Helvetica Neue,Helvetica,sans-serif;">NiftyCompanion
+    </h1>
+
+    <script src="dist/index.js"></script>
+</body>
+
+</html>
