--- a/desktopApp/index.html
+++ b/desktopApp/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 
 <body style="background-color: #1e272e;color:#bdc0ca">
